# renaminator

./: README.md  pyproject.toml
renaminator/: __main__.py  filer.py
